--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,22 @@
+comtypes==1.1.7
+cycler==0.10.0
+imutils==0.5.3
+kiwisolver==1.3.1
+matplotlib==3.3.3
+MouseInfo==0.1.3
+mss==6.1.0
+numpy==1.19.3
+opencv-python==4.4.0.46
+Pillow==8.0.0
+PyAutoGUI==0.9.52
 pygame==2.0.0
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyparsing==2.4.7
+pyperclip==1.8.1
+PyRect==0.1.4
+PyScreeze==0.1.26
+python-dateutil==2.8.1
+PyTweening==1.0.3
 pywin32==300
+six==1.15.0
